// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 0 1`] = `
<div
  data-testid="stock-tag"
>
  <div>
    <div
      className="ui green small basic label green-tag"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="check icon"
      />
       
      10 items in stock
    </div>
  </div>
</div>
`;

exports[`matches snapshot 1 1`] = `
<div
  data-testid="stock-tag"
>
  <div />
</div>
`;

exports[`matches snapshot 2 1`] = `
<div
  data-testid="stock-tag"
>
  <div>
    <div
      className="ui red small basic label red-tag"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="ban icon"
      />
       
      Out of Stock
    </div>
  </div>
</div>
`;

exports[`matches snapshot 3 1`] = `
<div
  data-testid="stock-tag"
>
  
</div>
`;
